--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,68 +1,12 @@
 .navbar-lewagon {
-  background-color: #edf1f0;
-  width: 100%;
-  max-height: 7vh;
-}
-
-.navbar {
-  .container-fluid {
-    display: flex;
-    flex-wrap: inherit;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #edf1f0;
-  }
-
-  a.nav-link {
-    font-size: 16px;
-    font-weight: 500;
-  }
-}
-
-#login {
-  background: linear-gradient(270deg, rgba(72,80,182,1) 0%, rgba(24,174,189,1) 100%);
-  padding: 8px 16px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 600;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-#logout {
-  font-size: 22px;
-  background: #d4574e;
-  padding: 10px 16px;
-  border-radius: 21px;
-  color: white;
-  font-weight: 600;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-#accueil {
-  margin: 0;
-  background: $background-color;
-  padding: 10px 18px;
-  border-radius: 20px;
-  color: white;
-  font-weight: 600;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-#come-back {
-  background: $background-color;
-  padding: 6px 12px;
-  border-radius: 20px;
-  color: white;
-  text-decoration: none;
-  font-size: 27px;
-  font-weight: 600;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-logout-nav-link {
-  font-family: Arial, Helvetica, sans-serif;
+  justify-content: space-between;
+  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 40px;
 }
