--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,13 +1,10 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Afacad:wght@600&family=Lilita+One&display=swap');// Define fonts for body and headers
-@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
+
+// Define fonts for body and headers
 $body-font: "Work Sans", "Helvetica", "sans-serif";
 $headers-font: "Nunito", "Helvetica", "sans-serif";
-$logo-font: 'Afacad', sans-serif;
-$username-font: 'Hind Siliguri', sans-serif;
-$username-description-font: 'Hind Siliguri', sans-serif;
-$profile-homepage-description-font: 'Hind Siliguri', sans-serif;
+
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
