--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,17 @@
-<h2>helloooooo</h2>
+
+
+
+      <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.parisselectbook.com/wp-content/uploads/2021/02/Four-Seasons-George-V-Paris.jpg);">
+        <div class="container text-center ">
+          <h1><strong>Find the right Hotel</strong> !</h1>
+          <p> Your experts,in budgets Hotels around teh world</p>
+
+
+        </div>
+      </div>
+
+
+
+      <div>
+          <%= link_to "Démarrer", hotels_path(@hotels)  %>
+        </div>
