--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,1 +1,9 @@
 <h1>hello</h1>
+<div class="card-product">
+  <img src="https://marseille.intercontinental.com/wp-content/uploads/sites/5/2023/02/chambre_Classic-King-vue-3-scaled-1.jpg" />
+  <div class="card-product-infos">
+    <h2>Chambre1</h2>
+    <p><%= @room.capacity %></p>
+    <p><%= @room.price_per_night %></p>
+  </div>
+</div>
